test/Fail/Issue2788a.err
Issue2788a.agda:3,1-27: error: [GenericError]
Missing option --cubical or --erased-cubical
when checking the pragma BUILTIN INTERVAL I
